<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>keyboard_msgs</name>
  <version>1.0.0</version>
  <description>Keyboard message definitions.</description>

  <author email="phreakuencies@gmail.com">v01d</author>

  <maintainer email="christopher.mower@kcl.ac.uk">cmower</maintainer>
  <author email="christopher.mower@kcl.ac.uk">cmower</author>

  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
